Bug 1339895 - Improve error message for unexpected token. r=arai