js/src/tests/js1_5/LexicalConventions/regress-469940.js
@@ -19,7 +19,7 @@ function test()
   printBugNumber(BUGNUMBER);
   printStatus (summary);
  
-  expect = 'SyntaxError: missing ; before statement';
+  expect = 'SyntaxError: unexpected token: identifier';
 
   var s = 'var x = function f() { \n return 42; } print(x);';
 
