js/src/tests/js1_8/regress/regress-384758.js
@@ -19,7 +19,7 @@ function test()
   printBugNumber(BUGNUMBER);
   printStatus (summary);
 
-  expect = 'SyntaxError: missing ; before statement';
+  expect = 'SyntaxError: unexpected token: identifier';
   try
   {
     eval('(function() { if(t) function x() foo() bar(); })');
